<resources>
    <string name="app_name">P2Photo</string>
    <string name="app_key">znh1m2wzcegv96c</string>
    <string name="title_activity_files">Files</string>
    <string name="input_name">User Name</string>
    <string name="input_password">Password</string>
    <string name="logoDescription">ISTLOGO</string>
    <string name="signup">Sign Up</string>
    <string name="login">Log In</string>
    <string name="menu1">Create Album</string>
    <string name="menu2">Your Albums</string>
    <string name="menu3">Add Photo</string>
    <string name="menu4"> Add Users to Album</string>
    <string name="menu5"> Pending invitations</string>
    <string name="preview"> Preview photo</string>
    <string name="AlbumName"> Album name:</string>
    <string name="cancel"> Cancel</string>
    <string name="add"> Add</string>
    <string name="settingsButtonString">Settings</string>
    <string name="logOutButtonString">Log Out</string>
    <string name="createAlbum">Create Album</string>
    <string name="requests">Requests</string>
    <string name="nameString">Name:</string>
    <string name="authUsersString">Authorized Users:</string>
    <string name="findUsersString">Find Users:</string>
    <string name="cancelString">  Cancel</string>
    <string name="confirmString">Confirm</string>
    <string name="addUserString">Add Users</string>
    <string name="findUser">Users available:</string>
    <string name="Pending">Pending requests:</string>
    <string name="usersAdded">Users being added:</string>
    <string name="albumName">Album Name</string>
    <string name="chooseLocalCloud">You can choose between
        using a cloud-based
        storage or local storage
        to store your photos.
    </string>
    <string name="chooseOne">Choose one:</string>
    <string name="local">Local</string>
    <string name="cloud">Cloud</string>
    <string name="back">Back</string>
    <string name="Continue">Continue</string>
    <string name="StorageLimit">Storage Limit (GB)</string>
    <string name="CacheLimit">Cache Limit (GB)</string>
    <string name="Save">Save Settings</string>
    <string name="Log">Log</string>
    <string name="choosePhoto">Choose Photo</string>
    <string-array name="test_arrays">
        <item>zé</item>
        <item>zée</item>
        <item>zéee</item>
        <item>zéeee</item>
        <item>zéeeee</item>
        <item>zéeeeee</item>
        <item>zéeeeeee</item>
    </string-array>
    <string name="dialog_text">Simple Dialog</string>
    <string name="btn_start_dialog_label">Dialog</string>
    <string name="btn_confirm_OK">Confirm</string>
    <string name="btn_confirm_cancel">Cancel</string>
    <string name="lbl_log_description">Log: For debug proposes</string>
    <string name="authCloud">Auth</string>
    <string name="ip">IP</string>
    <string name="port">Port</string>
    <string name="clientLog">Check client log</string>
    <string name="serverLog">Check server log</string>


</resources>
