<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ChooseCloudOrLocal">

    <Button
        android:id="@+id/debugSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:onClick="debugSendMessage"
        android:text="Send"
        app:layout_constraintEnd_toStartOf="@id/cloudAuthButton"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/local" />

    <Button
        android:id="@+id/cloudButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:enabled="true"
        android:onClick="selectCloud"
        android:text="@string/cloud"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toEndOf="@id/localButton"
        app:layout_constraintTop_toBottomOf="@id/cloud" />

    <TextView
        style="@style/TextView.Big"
        android:id="@+id/chooseBetween"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/chooseLocalCloud"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="150dp" />

    <TextView
        style="@style/TextView.Big"
        android:id="@+id/chooseOne"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/chooseOne"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/chooseBetween"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp" />

    <ImageView
        android:id="@+id/local"
        android:contentDescription="@string/logoDescription"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_phone_android_black_24dp"
        app:layout_constraintTop_toBottomOf="@id/chooseOne"
        app:layout_constraintEnd_toStartOf="@id/cloud"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="40dp"
        />

    <Button
        android:id="@+id/localButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/local"
        android:onClick="selectLocalWiFi"
        app:layout_constraintEnd_toStartOf="@id/cloudAuthButton"
        app:layout_constraintTop_toBottomOf="@id/local"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"

        />

    <ImageView
        android:id="@+id/cloud"
        android:contentDescription="@string/logoDescription"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_cloud_black_24dp"
        android:onClick="selectCloud"
        app:layout_constraintTop_toBottomOf="@id/chooseOne"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/local"
        android:layout_marginTop="40dp"
        />

    <Button
        android:id="@+id/cloudAuthButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="selectAuthCloud"
        android:text="@string/authCloud"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/localButton"

        app:layout_constraintTop_toBottomOf="@id/cloud" />

</android.support.constraint.ConstraintLayout>